# vigil

./: .gitignore  .graft  CLAUDE.md  Craft.md  Intel.md  README.md  REVIEW.md  Skills.md  action.yml  publish.py  pyproject.toml
.github/workflows/: tests.yml
intel/: pypi-incidents-2022-2025.md
src/vigil/: __init__.py  cli.py  config.py  models.py  output.py  parsers.py  resolver.py
src/vigil/analyzers/: base.py  cascade.py  community.py  maintainer.py  security.py  sustainability.py
src/vigil/clients/: github.py  pypi.py
tests/: test_analyzers.py  test_cascade.py  test_config.py  test_github_client.py  test_integration.py  test_models.py  test_parsers.py  test_pypi_client.py  test_resolver.py  test_version.py
validation/: results.json  validate.py
